Compilation/td5/Skeleton/syntax.output
Grammar

    0 $accept: session $end

    1 session: stmts

    2 stmts: stmts stmt
    3      | /* empty */

    4 stmt: ';'
    5     | expr ';'
    6     | KPRINT expr ';'
    7     | KREAD var ';'
    8     | var '=' expr ';'
    9     | KWHILE '(' expr ')' stmt
   10     | KIF '(' expr ')' stmt
   11     | KIF '(' expr ')' stmt KELSE stmt
   12     | '{' stmt_list '}'

   13 stmt_list: stmt
   14          | stmt_list stmt

   15 expr: NUMBER
   16     | var
   17     | '-' expr
   18     | expr '+' expr
   19     | expr '-' expr
   20     | expr '*' expr
   21     | expr '/' expr
   22     | expr '<' expr
   23     | expr '>' expr
   24     | expr GE expr
   25     | expr LE expr
   26     | expr NE expr
   27     | expr EQ expr
   28     | '(' expr ')'

   29 var: IDENT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 10 11 28
')' (41) 9 10 11 28
'*' (42) 20
'+' (43) 18
'-' (45) 17 19
'/' (47) 21
';' (59) 4 5 6 7 8
'<' (60) 22
'=' (61) 8
'>' (62) 23
'{' (123) 12
'}' (125) 12
error (256)
NUMBER (258) 15
IDENT (259) 29
KWHILE (260) 9
KIF (261) 10 11
KPRINT (262) 6
KELSE (263) 11
KREAD (264) 7
IF (265)
NE (266) 26
EQ (267) 27
LE (268) 25
GE (269) 24
UMINUS (270)


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
session (29)
    on left: 1, on right: 0
stmts (30)
    on left: 2 3, on right: 1 2
stmt (31)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 9 10 11 13 14
stmt_list (32)
    on left: 13 14, on right: 12 14
expr (33)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28,
    on right: 5 6 8 9 10 11 17 18 19 20 21 22 23 24 25 26 27 28
var (34)
    on left: 29, on right: 7 8 16


state 0

    0 $accept: . session $end

    $default  reduce using rule 3 (stmts)

    session  go to state 1
    stmts    go to state 2


state 1

    0 $accept: session . $end

    $end  shift, and go to state 3


state 2

    1 session: stmts .
    2 stmts: stmts . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '('     shift, and go to state 12
    '{'     shift, and go to state 13

    $default  reduce using rule 1 (session)

    stmt  go to state 14
    expr  go to state 15
    var   go to state 16


state 3

    0 $accept: session $end .

    $default  accept


state 4

   15 expr: NUMBER .

    $default  reduce using rule 15 (expr)


state 5

   29 var: IDENT .

    $default  reduce using rule 29 (var)


state 6

    9 stmt: KWHILE . '(' expr ')' stmt

    '('  shift, and go to state 17


state 7

   10 stmt: KIF . '(' expr ')' stmt
   11     | KIF . '(' expr ')' stmt KELSE stmt

    '('  shift, and go to state 18


state 8

    6 stmt: KPRINT . expr ';'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 19
    var   go to state 20


state 9

    7 stmt: KREAD . var ';'

    IDENT  shift, and go to state 5

    var  go to state 21


state 10

   17 expr: '-' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 22
    var   go to state 20


state 11

    4 stmt: ';' .

    $default  reduce using rule 4 (stmt)


state 12

   28 expr: '(' . expr ')'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 23
    var   go to state 20


state 13

   12 stmt: '{' . stmt_list '}'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '('     shift, and go to state 12
    '{'     shift, and go to state 13

    stmt       go to state 24
    stmt_list  go to state 25
    expr       go to state 15
    var        go to state 16


state 14

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


state 15

    5 stmt: expr . ';'
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    NE   shift, and go to state 28
    EQ   shift, and go to state 29
    LE   shift, and go to state 30
    GE   shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 36


state 16

    8 stmt: var . '=' expr ';'
   16 expr: var .

    '='  shift, and go to state 37

    $default  reduce using rule 16 (expr)


state 17

    9 stmt: KWHILE '(' . expr ')' stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 38
    var   go to state 20


state 18

   10 stmt: KIF '(' . expr ')' stmt
   11     | KIF '(' . expr ')' stmt KELSE stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 39
    var   go to state 20


state 19

    6 stmt: KPRINT expr . ';'
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    NE   shift, and go to state 28
    EQ   shift, and go to state 29
    LE   shift, and go to state 30
    GE   shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 40


state 20

   16 expr: var .

    $default  reduce using rule 16 (expr)


state 21

    7 stmt: KREAD var . ';'

    ';'  shift, and go to state 41


state 22

   17 expr: '-' expr .
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    $default  reduce using rule 17 (expr)


state 23

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr
   28     | '(' expr . ')'

    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    NE   shift, and go to state 28
    EQ   shift, and go to state 29
    LE   shift, and go to state 30
    GE   shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 42


state 24

   13 stmt_list: stmt .

    $default  reduce using rule 13 (stmt_list)


state 25

   12 stmt: '{' stmt_list . '}'
   14 stmt_list: stmt_list . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '('     shift, and go to state 12
    '{'     shift, and go to state 13
    '}'     shift, and go to state 43

    stmt  go to state 44
    expr  go to state 15
    var   go to state 16


state 26

   23 expr: expr '>' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 45
    var   go to state 20


state 27

   22 expr: expr '<' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 46
    var   go to state 20


state 28

   26 expr: expr NE . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 47
    var   go to state 20


state 29

   27 expr: expr EQ . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 48
    var   go to state 20


state 30

   25 expr: expr LE . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 49
    var   go to state 20


state 31

   24 expr: expr GE . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 50
    var   go to state 20


state 32

   18 expr: expr '+' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 51
    var   go to state 20


state 33

   19 expr: expr '-' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 52
    var   go to state 20


state 34

   20 expr: expr '*' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 53
    var   go to state 20


state 35

   21 expr: expr '/' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 54
    var   go to state 20


state 36

    5 stmt: expr ';' .

    $default  reduce using rule 5 (stmt)


state 37

    8 stmt: var '=' . expr ';'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 12

    expr  go to state 55
    var   go to state 20


state 38

    9 stmt: KWHILE '(' expr . ')' stmt
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    NE   shift, and go to state 28
    EQ   shift, and go to state 29
    LE   shift, and go to state 30
    GE   shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 56


state 39

   10 stmt: KIF '(' expr . ')' stmt
   11     | KIF '(' expr . ')' stmt KELSE stmt
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    NE   shift, and go to state 28
    EQ   shift, and go to state 29
    LE   shift, and go to state 30
    GE   shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 57


state 40

    6 stmt: KPRINT expr ';' .

    $default  reduce using rule 6 (stmt)


state 41

    7 stmt: KREAD var ';' .

    $default  reduce using rule 7 (stmt)


state 42

   28 expr: '(' expr ')' .

    $default  reduce using rule 28 (expr)


state 43

   12 stmt: '{' stmt_list '}' .

    $default  reduce using rule 12 (stmt)


state 44

   14 stmt_list: stmt_list stmt .

    $default  reduce using rule 14 (stmt_list)


state 45

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   23     | expr '>' expr .
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 23 (expr)


state 46

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   22     | expr '<' expr .
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 22 (expr)


state 47

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   26     | expr NE expr .
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 26 (expr)


state 48

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr
   27     | expr EQ expr .

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 27 (expr)


state 49

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   25     | expr LE expr .
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 25 (expr)


state 50

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   24     | expr GE expr .
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 24 (expr)


state 51

   18 expr: expr . '+' expr
   18     | expr '+' expr .
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 18 (expr)


state 52

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   19     | expr '-' expr .
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 19 (expr)


state 53

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   20     | expr '*' expr .
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    $default  reduce using rule 20 (expr)


state 54

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   21     | expr '/' expr .
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    $default  reduce using rule 21 (expr)


state 55

    8 stmt: var '=' expr . ';'
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    NE   shift, and go to state 28
    EQ   shift, and go to state 29
    LE   shift, and go to state 30
    GE   shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 58


state 56

    9 stmt: KWHILE '(' expr ')' . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '('     shift, and go to state 12
    '{'     shift, and go to state 13

    stmt  go to state 59
    expr  go to state 15
    var   go to state 16


state 57

   10 stmt: KIF '(' expr ')' . stmt
   11     | KIF '(' expr ')' . stmt KELSE stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '('     shift, and go to state 12
    '{'     shift, and go to state 13

    stmt  go to state 60
    expr  go to state 15
    var   go to state 16


state 58

    8 stmt: var '=' expr ';' .

    $default  reduce using rule 8 (stmt)


state 59

    9 stmt: KWHILE '(' expr ')' stmt .

    $default  reduce using rule 9 (stmt)


state 60

   10 stmt: KIF '(' expr ')' stmt .
   11     | KIF '(' expr ')' stmt . KELSE stmt

    KELSE  shift, and go to state 61

    $default  reduce using rule 10 (stmt)


state 61

   11 stmt: KIF '(' expr ')' stmt KELSE . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '('     shift, and go to state 12
    '{'     shift, and go to state 13

    stmt  go to state 62
    expr  go to state 15
    var   go to state 16


state 62

   11 stmt: KIF '(' expr ')' stmt KELSE stmt .

    $default  reduce using rule 11 (stmt)
